# mix

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  MIXAL_differences.md  README.md  appveyor.yml  build.cmd  cmake_clang_msvc.cmake  cmake_utils.cmake  vcpkg.json
core_lib/: CMakeLists.txt
core_lib/include/core/: assert.h  config.h  string.h  type_utils.h  utils.h
core_lib/source/: string.cpp
mix_exe/: CMakeLists.txt
mix_lib/: CMakeLists.txt
mix_lib/include/mix/: byte.h  char_table.h  command.h  command_processor.h  commands_factory.h  computer.h  computer_listener.h  device_controller.h  field.h  general_enums.h  general_types.h  io_device.h  registers.h  word.h  word_field.h  word_value.h
mix_lib/source/: char_table.cpp  command.cpp  command_processor.cpp  commands_factory.cpp  computer.cpp  device_controller.cpp  field.cpp  registers.cpp  word.cpp  word_field.cpp  word_value.cpp
src/core_lib/: CMakeLists.txt
src/core_lib/include/core/: config.h  optional.h  string.h
src/core_lib/source/: string.cpp
src/mix_lib/: CMakeLists.txt
src/mix_lib/include/mix/: byte.h  char_table.h  command.h  command_processor.h  computer.h  computer_listener.h  config.h  default_device.h  device_controller.h  exceptions.h  general_types.h  io_device.h  registers.h  word.h  word_field.h  word_value.h
src/mix_lib/source/: char_table.cpp  command.cpp  command_processor.cpp  computer.cpp  default_device.cpp  device_controller.cpp  registers.cpp  word.cpp  word_field.cpp  word_value.cpp
src/mix_lib/source/internal/: helpers.hpp  valarray_register_helpers.h
src/mixal_lib/: CMakeLists.txt
src/mixal_lib/include/mixal/: config.h  exceptions.h  line_translator.h  mdk_program_loader.h  operation_info.h  operations_calculator.h  program_executor.h  translator.h  translator_listener.h  types.h
src/mixal_lib/source/: line_translator.cpp  mdk_program_loader.cpp  operation_info.cpp  operations_calculator.cpp  program_executor.cpp  program_loader.cpp  translator.cpp
src/mixal_parse_lib/: CMakeLists.txt
src/mixal_parse_lib/include/mixal_parse/: address_parser.h  config.h  expression.h  expression_parser.h  field_parser.h  index_parser.h  label.h  label_parser.h  line_parser.h  literal_parser.h  operation.h  operation_address_parser.h  operation_id.h  operation_parser.h  parser_base.h  parsers_utils.h  w_value_parser.h
src/mixal_parse_lib/source/: address_parser.cpp  expression_parser.cpp  field_parser.cpp  index_parser.cpp  label_parser.cpp  line_parser.cpp  literal_parser.cpp  operation_address_parser.cpp  operation_id.cpp  operation_parser.cpp  parsers_utils.cpp  w_value_parser.cpp
src/mixal_parse_lib/source/types/: operation_id.cpp
src/mixal_parser_lib/: CMakeLists.txt
src/mixal_parser_lib/include/mixal/: address_parser.h  config.h  constant_literal_parser.h  constant_word_expression_parser.h  expression.h  expression_parser.h  field_parser.h  index_parser.h  label_parser.h  line_parser.h  literal_parser.h  operation_address_parser.h  operation_id.h  operation_parser.h  parse_exceptions.h  parser.h  parser_base.h  parsers_utils.h  w_value_parser.h  word_field_parser.h
src/mixal_parser_lib/source/: address_parser.cpp  constant_literal_parser.cpp  constant_word_expression_parser.cpp  expression_parser.cpp  field_parser.cpp  index_parser.cpp  label_parser.cpp  line_parser.cpp  literal_parser.cpp  operation_address_parser.cpp  operation_id.cpp  operation_parser.cpp  parsers_utils.cpp  w_value_parser.cpp  word_field_parser.cpp
src/mixui/: CMakeLists.txt
src/mixui/include/mixui/: application.h  command_help.h  debugger.h  ui_debugger_view.h  ui_mix_flags.h  ui_register.h  ui_word.h  utils.h
src/mixui/source/: application.cpp  command_help.cpp  debugger.cpp  main.cpp  ui_debugger_view.cpp  ui_mix_flags.cpp  ui_register.cpp  ui_word.cpp
src/py_bindings/mixal_parser_lib/: CMakeLists.txt
src/py_bindings/mixal_parser_lib/source/: main.cpp
src/tests/: CMakeLists.txt  gtest_all.h
src/tests/mixal_code/: mdk_program_maximum.mixal  mdk_program_mistery.mixal  mdk_program_primes.mixal  program_m.mixal  program_maximum.mixal  program_mistery.mixal  program_p.mixal  program_primes.mixal
src/tests/test_core/: CMakeLists.txt
src/tests/test_core/source/: test_string.cpp
src/tests/test_mix/: CMakeLists.txt  precompiled.h
src/tests/test_mix/source/: commands_factory.h  mocks.h  test_TAOCP_book_add.cpp  test_TAOCP_book_mul.cpp  test_TAOCP_book_shifts.cpp  test_TAOCP_book_sta.cpp  test_add.cpp  test_byte.cpp  test_cmp_group.cpp  test_command.cpp  test_enta_group.cpp  test_inc_dec_group.cpp  test_input_output.cpp  test_jump.cpp  test_ld.cpp  test_num_char.cpp  test_st.cpp  test_sub.cpp
src/tests/test_mixal/: CMakeLists.txt
src/tests/test_mixal/source/: commands_factory.h  test_line_translator.cpp  test_translator.cpp  test_translator_symbols.cpp
src/tests/test_mixal_parse/: CMakeLists.txt
src/tests/test_mixal_parse/source/: expression_builders.h  parser_test_fixture.h  test_address_parser.cpp  test_expression_parser.cpp  (+9 more)
src/tests/test_mixal_parser/: CMakeLists.txt
src/tools/mixal_format/: CMakeLists.txt
src/tools/mixal_format_lib/: CMakeLists.txt
src/tools/mixal_formatter/: CMakeLists.txt
src/tools/mixal_formatter_lib/: CMakeLists.txt
tests/test_mix/: CMakeLists.txt
tests/test_mix/source/: commands_factory.h  computer_listener_mock.h  mocks.h  precompiled.h  test_TAOCP_book_add.cpp  test_TAOCP_book_div.cpp  test_TAOCP_book_lda.cpp  test_TAOCP_book_mul.cpp  test_TAOCP_book_sta.cpp  test_add.cpp  test_byte.cpp  test_cmp_group.cpp  test_command.cpp  test_enta_group.cpp  test_inc_dec_group.cpp  test_input.cpp  test_input_output.cpp  test_jump.cpp  test_ld.cpp  test_lda.cpp  test_num_char.cpp  test_st.cpp  test_sta.cpp  test_sub.cpp  test_word.cpp  test_word_field.cpp  test_word_value.cpp
tests/test_mixal_parser/: CMakeLists.txt
tests/test_mixal_parser/source/: test_constant_word_expression_parser.cpp  test_expression_parser.cpp  test_label_parser.cpp  test_line_parser.cpp  test_operation_parser.cpp  test_parsers_utils.cpp
(+93 files in other folders)
